# platform.core.multimedia.libcamsrcjpegenc

./: Makefile.am  camsrcjpegenc.pc.in  configure  configure.ac  project.config
debian/: changelog  control  rules
packaging/: libcamsrcjpegenc.spec
src/: Makefile.am  camsrcjpegenc.c
src/include/: camsrcjpegenc.h  camsrcjpegenc_sub.h  camsrcjpegenc_type.h
